# pymiscutils

./: .gitignore  NOTES  README  README.md  README.rst  dodo.py  poetry.toml  pyproject.toml  setup.py
docs/: Makefile
docs/source/: attr_router.rst  conf.py  config.rst  dbg.rst  func.rst  index.rst  insp.rst  io.rst  iter.rst  listing.rst  os.rst  pyext.rst  shell.rst  str.rst  tools.rst  tree.rst  user.rst
docs/source/insp/: experimental.rst  getdefault.rst  gloloc.rst  isaccess.rst
docs/source/io/: experimental.rst  prompt.rst
docs/source/os/: experimental.rst
docs/source/tools/: experimental.rst
docs/source/user/: experimental.rst  proxy.rst  routers.rst
examples/: README  isfirstlast.py
miscutils/: attr_router.py  config.py  io.py  iter.py  listing.py  listing_here.py  magic_with.py  pyext.py  routers.py  shell.py  tree.py
miscutils/dbg/: __init__.py  attrch.py
miscutils/func/: __init__.py  catch.py  permisive.py  retry.py
miscutils/insp/: __init__.py
miscutils/insp/experimental/: __init__.py  arginfo.py
miscutils/io/: __init__.py
miscutils/io/experimental/: config.py
miscutils/iter/: __init__.py
miscutils/str/: __init__.py
miscutils/user/: box.py  proxy.py  routers.py  tree.py
tests/: README  test_arginfo.py  test_attr_router.py  test_attrch.py  test_attrext.py  test_box.py  test_config.py  test_getdefault.py  test_iget.py  test_isaccess.py  test_isfirstlast.py  test_lrsub.py  test_permisive.py  test_prompt.py  test_pyext_attrext.py  test_routers_eager.py  test_routers_lazy.py  test_routers_proxy.py  test_routers_tree.py
(+9 files in other folders)
