[tool.poetry]
name = "miscutils"
version = "1.4.0"
description = "Miscellaneous utilities for general use"
authors = ["Grzegorz Krason <grzegorz.krason@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["iterating",
            "head",
            "tail",
            "listing",
            "router",
            "proxy",
            "prompt",
            "shell"]

[tool.poetry.dependencies]
python = "^3.6"
"ruamel.yaml" = "^0.16.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
sphinx = "^2.4.0"
pytest-sugar = "^0.9.2"
pytest-mock = "^2.0.0"

[tool.poetry.scripts]
pylisting = "miscutils.tools.experimental.listing:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
